--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -512,7 +512,8 @@ p,li {
 	vertical-align: middle;
 	display: inline-block;
 	float: left;
-	max-width: 20px;
+	width: 20px;
+	height: 20px
 	box-shadow: none;
 	-webkit-border-radius: 20%;
 	-moz-border-radius: 20%;
