--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -649,8 +649,8 @@ p,li {
 .blog-icon img {
 	display: block;
 	margin: auto;
-	margin-top: 40px;
-	margin-bottom: 40px;
+	margin-top: 5em;
+	margin-bottom: 5em;
 }
 
 /*.blog-icon {
