--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -508,21 +508,6 @@ p,li {
 	-webkit-transition: all 0.2s ease-out
 }
 
-.post-title img {
-	vertical-align: middle;
-	display: inline-block;
-	float: left;
-	width: 20px;
-	height: 20px
-	box-shadow: none;
-	-webkit-border-radius: 22%;
-	-moz-border-radius: 22%;
-	-ms-border-radius: 22%;
-	-o-border-radius: 22%;
-	border-radius: 22%;
-	clear: left
-}
-
 .large-app-icon img {
 	max-width: 256px;
 	-webkit-border-radius: 22%;
@@ -580,8 +565,24 @@ p,li {
 .post-title {
 	margin-left: 2em;
 	margin-top: -20px;
-	margin-bottom: 2em;
+	margin-bottom: 2em
+}
+
+.post-title img {
+	vertical-align: middle;
+	display: inline-block;
+	float: left;
+	width: 20px;
+	height: 20px
+	box-shadow: none;
+	-webkit-border-radius: 22%;
+	-moz-border-radius: 22%;
+	-ms-border-radius: 22%;
+	-o-border-radius: 22%;
+	border-radius: 22%;
+	clear: left;
 	overflow: hidden
+
 }
 
 #disqus_thread {
