--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -572,8 +572,7 @@ p,li {
 	vertical-align: middle;
 	display: inline-block;
 	float: left;
-	width: 20px;
-	height: 20px
+	max-width: 20px;
 	box-shadow: none;
 	-webkit-border-radius: 22%;
 	-moz-border-radius: 22%;
@@ -582,7 +581,6 @@ p,li {
 	border-radius: 22%;
 	clear: left;
 	overflow: hidden
-
 }
 
 #disqus_thread {
