--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -570,9 +570,9 @@ p,li {
 
 .post-title img {
 	vertical-align: middle;
-	display: inline-block;
+	display: block;
 	float: left;
-	width: 100%;
+	max-width: 20px;
 	box-shadow: none;
 	-webkit-border-radius: 22%;
 	-moz-border-radius: 22%;
