--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -570,7 +570,7 @@ p,li {
 
 .post-title img {
 	vertical-align: middle;
-	display: block;
+	display: inline-block;
 	float: left;
 	max-width: 20px;
 	box-shadow: none;
