--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -572,7 +572,7 @@ p,li {
 	margin-right: .5em;
 	display: inline-block;
 	float: left;
-	max-width: 20px;
+	/*max-width: 20px;*/
 	box-shadow: 0px 2px 4px rgba(0,0,0,0.5);
 	-webkit-border-radius: 23%;
 	-moz-border-radius: 23%;
