--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -590,9 +590,12 @@ p,li {
 }
 
 .post-title img {
-	margin-right: .5em;
 	display: inline-block;
 	float: left;
+	vertical-align: middle;
+	margin: inherit;
+	margin-top: 5px;
+	margin-right: .4em;
 	/*max-width: 20px;*/
 	box-shadow: 0px 2px 4px rgba(0,0,0,0.5);
 	-webkit-border-radius: 23%;
@@ -601,6 +604,7 @@ p,li {
 	-o-border-radius: 23%;
 	border-radius: 23%;
 	clear: left;
+	overflow: hidden;
 }
 
 #disqus_thread {
