add page accelerator

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,4 +4,6 @@
         </footer>
 	</div>
 </body>
+<script src="/js/page-accelerator/page-accelerator.min.js"></script>
+<script> pageAccelerator(); </script>
 </html>
