--- a/_includes/header.html
+++ b/_includes/header.html
@@ -59,8 +59,8 @@
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 
-  <script src="/pace/pace.min.js"></script>
-  <link href="/pace/themes/pace-theme-minimal.css" rel="stylesheet" />
+  <script src="/js/pace/pace.min.js"></script>
+  <link href="/js/pace/themes/pace-theme-minimal.css" rel="stylesheet" />
 
   
 </head>
