--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
   <meta name="apple-itunes-app" content="app-id={{ page.results.first.trackId }}, affiliate-data=at=10lIvG" />
   {% endif %}
 
-  <link href='//fonts.lug.ustc.edu.cn/css?family=Titillium+Web:400,600,300' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Titillium+Web:400,600,300' rel='stylesheet' type='text/css'>
   <!-- <link rel="stylesheet" href="/fonts/titilliumweb-regular-webfont/style.css" /> -->
 
   <link rel="stylesheet" href="/fonts/icomoon/style.css" />
