--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,8 +33,18 @@
   <meta name="apple-itunes-app" content="app-id={{ page.results.first.trackId }}, affiliate-data=at=10lIvG" />
   {% endif %}
 
-  <link href='//fonts.googleapis.com/css?family=Titillium+Web:400,600,300' rel='stylesheet' type='text/css'>
+  <!-- <link href='//fonts.googleapis.com/css?family=Titillium+Web:400,600,300' rel='stylesheet' type='text/css'> -->
   <!-- <link rel="stylesheet" href="/fonts/titilliumweb-regular-webfont/style.css" /> -->
+
+<script src="//cdnjs.cloudflare.com/ajax/libs/webfont/1.6.26/webfontloader.js"></script>
+<script>
+  WebFont.load({
+    google: {
+      families: ['Titillium Web:400,600,300']
+    },
+    timeout: 4000
+  });
+</script>
 
   <link rel="stylesheet" href="/fonts/icomoon/style.css" />
 
