--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--[if IE 8]> 				 <html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="zh-cn"> <!--<![endif]-->
 <head>
 	<meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
@@ -33,10 +33,8 @@
   <meta name="apple-itunes-app" content="app-id={{ page.results.first.trackId }}, affiliate-data=at=10lIvG" />
   {% endif %}
 
-  <!-- <link href='//fonts.googleapis.com/css?family=Titillium+Web:400,600,300' rel='stylesheet' type='text/css'> -->
-  <!-- <link rel="stylesheet" href="/fonts/titilliumweb-regular-webfont/style.css" /> -->
-
-  <script src="//cdnjs.cloudflare.com/ajax/libs/webfont/1.6.26/webfontloader.js"></script>
+  <link href='//fonts.googleapis.com/css?family=Titillium+Web:400,600,300' rel='stylesheet' type='text/css'>
+ <!--  <script src="//cdnjs.cloudflare.com/ajax/libs/webfont/1.6.27/webfontloader.js"></script>
   <script>
     WebFont.load({
       google: {
@@ -44,7 +42,7 @@
       },
       timeout: 4000
     });
-  </script>
+  </script> -->
 
   <link rel="stylesheet" href="/fonts/icomoon/style.css" />
 
